--- a/src/sass/_header.sass
+++ b/src/sass/_header.sass
@@ -26,8 +26,7 @@ header
             transition: 0.5s all
             color: $head-color
             &:hover
-                font-size: 18px
-                color: $text-color
+                color: $text_color
             &:nth-child(6)
                 border-right: none
     .header__burger
