--- a/src/sass/_ordering.sass
+++ b/src/sass/_ordering.sass
@@ -1,9 +1,9 @@
 section.ordering
-    padding: 25px 0px 0px 0px
+    padding: 0px 0px 0px 0px
     h3 
         @include title
         text-align: center
-        padding-bottom: 25px
+        padding: 25px 0
     .container
         padding: 0px
         div.ordering__wrapper
@@ -26,7 +26,7 @@ section.ordering
                     width: 50px
                     height: 50px
             .ordering__form
-                margin: 35px 0
+                margin: 35px 0 25px 0
                 display: flex
                 justify-content: space-around
                 flex-wrap: wrap
