--- a/src/sass/_slider.sass
+++ b/src/sass/_slider.sass
@@ -45,11 +45,13 @@ div.slider
                 background-color: $bg_color
                 border-radius: 10px            
                 height: auto
+                outline: none
                 img
                     display: block
                     width: 48%
                     margin: 5px 0px
                     border-radius: 10px
+                    padding-left: 1px
                 div.slider__content__desc
                     width: 48%
                     padding: 5px
