--- a/src/sass/_media_sm_md.sass
+++ b/src/sass/_media_sm_md.sass
@@ -513,6 +513,7 @@
                     align-items: center
                     justify-content: space-between
                     flex-direction: column
+                    margin-bottom: 30px
                     input
                         width: 85%
                         margin-bottom: 26px
@@ -523,9 +524,11 @@
                         font-size: 17px
                     .btn.btn-form
                         margin-top: 0px
-                        width: 45%
+                        width: 55%
                         font-size: 17px
                         height: 50px
+                    label.error 
+                        text-align: center      
 
     div.modal
         div.modal__window
@@ -697,18 +700,22 @@
                     align-items: center
                     justify-content: space-between
                     flex-direction: column
+                    margin-bottom: 30px
                     input
-                        width: 85%
+                        width: 95%
                         margin-bottom: 26px
                         font-size: 15px
                     .text_field
-                        width: 85%
+                        width: 95%
                         margin-bottom: 25px
                         font-size: 15px
                     .btn.btn-form
-                        width: 48%
-                        font-size: 15px
+                        width: 70%
+                        font-size: 14px
                         height: 49px
+                        mb
+                        &:hover
+                           font-size: 14px
                     label.error 
                         font-size: 13px
                         text-align: center        
@@ -730,8 +737,9 @@
                 .text_field
                     font-size: 13px
                 .btn.btn-form
-                    width: 65%
+                    width: 55%
                     font-size: 13px
+                    height: 45px
                 label.error 
                     font-size: 13px
                     text-align: center    
