--- a/src/sass/_ordering.sass
+++ b/src/sass/_ordering.sass
@@ -9,7 +9,7 @@ section.ordering
         div.ordering__wrapper
             background-color: $bg_color
             width: 100%
-            margin: 0 auto 25px auto
+            margin: 0 auto 
             padding-top: 25px
             border-radius: 10px
             height: auto
@@ -27,28 +27,34 @@ section.ordering
                     width: 50px
                     height: 50px
             .ordering__form
-                margin: 35px 0 25px 0
                 display: flex
                 justify-content: space-around
+                align-items: center
                 flex-wrap: wrap
+                width: 70%
+                margin: 0 auto
+                flex-direction: column
+                margin: 30px auto 0px 
                 input
                     @include form_element
                     text-decoration: none
                     font-weight: 300
+                    width: 60%
+                    margin-bottom: 30px
                     &:focus
                         border-bottom: 2px solid #fc7979               
                 .text_field
                     @include form_element
-                    margin: 25px 0
+                    margin: 0px 0 25px 0
                     height: auto
                     text-decoration: none
                     font-weight: 300
                     margin-bottom: 25px
+                    width: 60%
                     &:focus
                         border-bottom: 2px solid #fc7979 
                 .btn.btn-form
-                    margin-top: 25px
-                    width: 30%
+                    width: 40%
                     transition: 0.3s all
                     &:hover
                         background-color: $bg_color
