--- a/src/sass/_header.sass
+++ b/src/sass/_header.sass
@@ -1,78 +1,79 @@
 header
-    position: relative
-    padding: 10px
-    height: 650px
     // .header__logo
     //     margin: auto
     //     img
     //         width: 100%
     //         display: block
     //         border-radius: 50%
-    .row
-        padding-top: 35px 
-    nav.menu
-        padding: 0px 
-        display: flex
-        justify-content: space-around
-        align-items: center
-        z-index: 1
-        .menu__link
-            text-decoration: none
-            display: block
-            border-right: none
-            padding-right: 4px
-            font-size: 18px
-            text-transform: uppercase
-            transition: 0.5s all
-            color: $head-color
-            &:hover
-                color: $text_color
-            &:nth-child(6)
+    .container
+        background: url('../img/2.jpg') center (center/cover) no-repeat
+        height: 640px
+        .row
+            padding-top: 35px 
+        nav.menu
+            padding: 0px 
+            display: flex
+            justify-content: space-around
+            align-items: center
+            z-index: 1
+            .menu__link
+                text-decoration: none
+                display: block
                 border-right: none
-    .header__burger
-        display: none
-        z-index: 1            
-    .header__callback
-        display: flex
-        justify-content: center
-        flex-direction: column    
-    .header__callback__desc
-        text-align: center   
-    .header__callback__link
-        text-align: center
-        display: block
-        margin-top: 5px
-        text-decoration: none
-    .header__btn
-        display: flex
-        align-items: center    
-        button.btn.btn-callback
+                padding-right: 4px
+                font-size: 18px
+                text-transform: uppercase
+                transition: 0.5s all
+                color: $head-color
+                &:hover
+                    color: $text_color
+                &:nth-child(6)
+                    border-right: none
+        .header__burger
+            display: none
+            z-index: 1            
+        .header__callback
+            display: flex
+            justify-content: center
+            flex-direction: column    
+        .header__callback__desc
+            text-align: center   
+        .header__callback__link
+            text-align: center
             display: block
-            margin: 0 auto
-            outline: none
-            &:hover
-                background-color: #fff
-                color: #000
-                border: 1px solid #000
-                font-weight: 500
-    .header__title
-        text-align: center
-        margin-top: 100px
-    .header__subtitle
-        text-align: center
-        margin-top: 50px
-        text-decoration:     
-    .bg_header
-        position: absolute
-        top: 0px
-        z-index: -1
-        filter: blur(4px)
-        width: 100%
-        display: block
-        height: 650px
+            margin-top: 5px
+            text-decoration: none
+        .header__btn
+            display: flex
+            align-items: center    
+            button.btn.btn-callback
+                display: block
+                margin: 0 auto
+                outline: none
+                &:hover
+                    background-color: #fff
+                    color: #000
+                    border: 1px solid #000
+                    font-weight: 500
+        .header__title
+            text-align: center
+            margin-top: 100px
+        .header__subtitle
+            text-align: center
+            margin-top: 50px
+            text-decoration:     
+        // img.bg_header
+        //     position: absolute
+        //     top: 0%
+        //     left: 0%            
+        //     z-index: -1
+        //     // filter: blur(1px)
+        //     width: 60%
+        //     display: block
+        //     height: auto
+        //     margin: 0 auto
        
                     
                     
-            
-                
+   
         
