--- a/src/sass/_prices.sass
+++ b/src/sass/_prices.sass
@@ -34,4 +34,6 @@
     &__desc
         text-align: center
         margin-top: 10px
-        font-weight: 300 
+        font-weight: 300
+    .container
+        padding: 0px             
