--- a/src/sass/_media_sm_md.sass
+++ b/src/sass/_media_sm_md.sass
@@ -1,7 +1,6 @@
 // для  девайсов col-xl и больше
     
 @media (min-width: 1200px)
-
     .description
         &__block
             display: flex
@@ -21,6 +20,7 @@
                 flex-direction: column
                 h3
                     text-align: center
+
     div.slider
         margin-top: 20px
         div.row
@@ -44,7 +44,7 @@
 
 @media (min-width: 992px) and (max-width: 1199.98px)
     header
-        height: 450px
+        // height: 450px
         .bg_header
             height: 450px
         div.container
@@ -129,57 +129,63 @@
             width: 50%
 
     .tabloids
-        padding-top: 35px       
+        padding-top: 35px
 
-    
+    footer
+        div.container
+            div.title
+                margin-bottom: 25px
+                h3
+                    text-align: center
+            .footer__info
+                top: 100px              
+                width: 50%         
                                          
 
 // для мобильных девайсов col-md                    
 
 @media (min-width: 768px) and (max-width: 991.98px)
-    
     header
-        height: 450px
-        .bg_header
-            height: 450px
-        div.row
-            padding-top: 15px
-            .menu
-                flex-direction: column
-                align-items: center
-                justify-content: center
-                position: fixed
-                top: 10px
-                left: -100%
-                background-color: rgba(0, 0, 0, .90)
-                width: 45%
-                height: 65vh
-                transition: 1s all
-                &_active
-                    left: 10px
-                a.menu__link
-                    font-size: 20px
-                    margin-bottom: 25px
-                    border-right: none
-            div.header__callback
-                flex-direction: row
-                align-items: center
-                justify-content: space-around
-                .header__callback__link
-                    margin-top: 0px
-                    font-size: 20px
-                    font-weight: 700
-                .header__callback__desc
-                    font-size: 20px
-                    font-weight: 700
-        .header__title
-            margin-top: 30px 
-            h1
-                font-size: 40px 
-        .header__subtitle
-            margin-top: 25px  
-            h2
-                font-size: 30px                      
+        .container
+            height: 430px
+            div.row
+                padding-top: 15px
+                .menu
+                    flex-direction: column
+                    align-items: center
+                    justify-content: center
+                    position: fixed
+                    top: 10px
+                    left: -100%
+                    background-color: rgba(0, 0, 0, .90)
+                    width: 45%
+                    height: 65vh
+                    transition: 1s all
+                    &_active
+                        left: 10px
+                    a.menu__link
+                        font-size: 20px
+                        margin-bottom: 25px
+                        border-right: none
+                div.header__callback
+                    flex-direction: row
+                    align-items: center
+                    justify-content: space-around
+                    .header__callback__link
+                        margin-top: 0px
+                        font-size: 20px
+                        font-weight: 700
+                    .header__callback__desc
+                        font-size: 20px
+                        font-weight: 700
+            .header__title
+                margin-top: 35px 
+                h1
+                    font-size: 40px 
+            .header__subtitle
+                margin-top: 30px  
+                h2
+                    font-size: 30px                      
         div.header__burger
             display: block
             position: fixed
@@ -187,22 +193,14 @@
             right: 18px
             height: 21px
             width: 35px
+            z-index: 1
             .burger
                 display: block
                 margin-bottom: 3px
                 height: 4px
                 width: 100%
                 background-color: $head-color
-        // div.header__burger_active
-        //     .burger
-        //         margin-top: -7px
-        //         &:nth-last-child(1)
-        //             transform: rotate(45deg)
-        //         &:nth-last-child(2)
-        //             display: none
-        //         &:nth-last-child(3)
-        //             transform: rotate(-45deg)
-
+      
     .description
         padding-top: 25px 0
         &__subtitle
@@ -303,6 +301,7 @@
             width: 50%
 
     .tabloids
+        padding-top: 25px
         .tabloids__tabs
             align-items: center
             flex-wrap: wrap
@@ -370,56 +369,77 @@
                 span
                     font-size: 40px                    
             .prices__desc
-                font-size: 17px                                             
+                font-size: 17px
+                margin-bottom: 10px
+
+    footer
+        div.container
+            div.title
+                margin-bottom: 25px
+                h3
+                    text-align: center
+            .footer__info
+                top: 110px
+                width: 50%                
+                .footer__info__social
+                    .icon
+                        width: 65px
+                        height: 65px
+                        span.social
+                            font-size: 40px
+                                                                          
 
                                
 // для мобильных девайсов sm
 
 @media (max-width: 767.98px)
     header
-        height: 550px
-        .bg_header
-            height: 550px
-        .header__title h1
-            font-size: 32px 
-        .header__subtitle h2
-            font-size: 26px     
-        div.row
-            padding-top: 10px
-            nav.menu
-                flex-direction: column
-                align-items: center
-                justify-content: center
-                position: fixed
-                top: 10px
-                left: -100%
-                background-color: rgba(0, 0, 0, .75)
-                width: 55%
-                height: 80vh
-                transition: 1s all
-                &_active
-                    left: 10px
-                .menu__link
-                    font-size: 19px
-                    margin-bottom: 25px
-                    border-right: none
-            div.header__callback
-                flex-direction: row
-                align-items: center
-                justify-content: space-around
-                padding-right: 0px
-                .header__callback__link
-                    margin-top: 0px
-                    font-size: 17px
-                    font-weight: 500
-                .header__callback__desc
-                    font-size: 17px
-                    font-weight: 500 
-            .header__btn
-                padding: 0px
-                .btn.btn-callback
-                    height: 36px
-                                                        
+        .container
+            height: 350px        
+            .header__title
+                margin-top: 50px 
+                h1
+                    font-size: 32px
+                    margin-top: 10px 
+            .header__subtitle
+                margin-top: 25px 
+                h2
+                    font-size: 26px      
+            div.row
+                padding-top: 10px
+                nav.menu
+                    flex-direction: column
+                    align-items: center
+                    justify-content: center
+                    position: fixed
+                    top: 10px
+                    left: -100%
+                    background-color: rgba(0, 0, 0, .75)
+                    width: 55%
+                    height: 80vh
+                    transition: 1s all
+                    &_active
+                        left: 10px
+                    .menu__link
+                        font-size: 19px
+                        margin-bottom: 25px
+                        border-right: none
+                div.header__callback
+                    flex-direction: row
+                    align-items: center
+                    justify-content: space-around
+                    padding-right: 0px
+                    .header__callback__link
+                        margin-top: 0px
+                        font-size: 17px
+                        font-weight: 500
+                    .header__callback__desc
+                        font-size: 17px
+                        font-weight: 500 
+                .header__btn
+                    padding: 0px
+                    .btn.btn-callback
+                        height: 36px                                                        
         div.header__burger
             display: block
             position: fixed
@@ -427,6 +447,7 @@
             right: 15px
             height: 21px
             width: 30px
+            z-index: 1
             .burger
                 display: block
                 margin-bottom: 3px
@@ -456,12 +477,12 @@
                     font-size: 15px
                     font-weight: 300
             div.description__block__icon
-                width: 75px
-                height: 75px
+                width: 65px
+                height: 65px
                 margin-top: 0px
                 margin: 0 auto
                 span
-                    font-size: 45px        
+                    font-size: 40px        
 
     div.slider
         div.row
@@ -500,10 +521,10 @@
         h3 
             @include title
             font-size: 24px
-        .container    
+        div.container    
             div.ordering__wrapper
                 border-radius: 13px
-                .ordering__icon
+                div.ordering__icon
                     width: 65px
                     height: 65px
                     img
@@ -570,65 +591,82 @@
                 h3
                     font-size: 18px      
             .prices__icon
-                width: 75px
-                height: 75px
+                width: 65px
+                height: 65px
                 span
-                    font-size: 45px                    
+                    font-size: 40px                    
             .prices__desc
-                font-size: 16px                                                            
+                font-size: 16px 
+
+    footer
+        div.container
+            div.title
+                margin-bottom: 25px
+                h3
+                    text-align: center
+            .footer__info
+                top: 110px
+                width: 58%
+                address, .footer__info__tel
+                    font-size: 16px                                 
+                .footer__info__social
+                    .icon
+                        width: 65px
+                        height: 65px
+                        span.social
+                            font-size: 40px                                                                       
                                                                                      
 
 // для мобильных девайсов xs
 
 @media (max-width: 575.98px)                        
     header
-        padding: 2px
-        height: 350px
-        .bg_header
-            height: 350px
-        div.row
-            padding-top: 15px
-            nav.menu
-                justify-content: center
-                height: 50vh
-                width: 60%
-                a.menu__link
-                    font-size: 15px
-                    margin-bottom: 20px
-                    border-right: none
-            div.header__burger
-                display: block
-                position: fixed
-                top: 10px
-                right: 10px
-                height: 21px
-                width: 25px
-            div.header__callback
-                flex-direction: column    
-                div.header__callback__desc
-                    font-size: 15px
-                    text-align: center
-                    font-weight: 700
-                a.header__callback__link
-                    font-size: 14px
-                    font-weight: 700
-                    text-align: center
+        .container
+            height: 300px
+            .row
+                padding-top: 15px
+                nav.menu
+                    justify-content: center
+                    height: 50vh
+                    width: 60%
+                    a.menu__link
+                        font-size: 15px
+                        margin-bottom: 20px
+                        border-right: none
+        
+                div.header__callback
+                    flex-direction: column    
+                    div.header__callback__desc
+                        font-size: 11px
+                        text-align: center
+                        font-weight: 700
+                    a.header__callback__link
+                        font-size: 11px
+                        font-weight: 700
+                        text-align: center
+                        padding: 0px
+                        text-decoration: underline
+                .header__btn
                     padding: 0px
-                    text-decoration: underline
-            .header__btn
-                padding: 0px
-                align-items: flex-start    
-                .btn.btn-callback
-                    font-size: 11px
-                    height: 36px
-        .header__title
-            margin-top: 30px
-            h1
-                font-size: 22px
-        .header__subtitle
-            margin-top: 20px        
-            h2
-                font-size: 20px
+                    align-items: flex-start    
+                    .btn.btn-callback
+                        font-size: 11px
+                        height: 36px
+            div.header__title
+                margin-top: 50px
+                h1
+                    font-size: 22px
+            .header__subtitle
+                margin-top: 30px        
+                h2
+                    font-size: 20px
+        div.header__burger
+            display: block
+            position: fixed
+            top: 10px
+            right: 10px
+            height: 21px
+            width: 25px            
 
     section.description
         .description__subtitle h3
@@ -767,6 +805,28 @@
                 span
                     font-size: 37px                    
             .prices__desc
-                font-size: 16px                                                            
+                font-size: 16px
+
+    footer
+        div.container
+            div.title
+                margin-bottom: 25px
+                h3
+                    text-align: center
+            .footer__info
+                top: 130px
+                width: 65%
+                address, .footer__info__tel
+                    font-size: 14px                                 
+                .footer__info__social
+                    flex-wrap: wrap
+                    margin-bottom: 0px
+                    .icon
+                        margin 0px
+                        width: 55px
+                        height: 55px
+                        margin-bottom: 15px
+                        span.social
+                            font-size: 35px                                                                                        
                                                    
         
