--- a/src/sass/_ordering.sass
+++ b/src/sass/_ordering.sass
@@ -41,8 +41,8 @@ section.ordering
                     font-weight: 300
                     width: 60%
                     margin-bottom: 30px
-                    &:focus
-                        border-bottom: 2px solid #fc7979               
+                    // &:focus
+                    //     border-bottom: 2px solid #fc7979               
                 .text_field
                     @include form_element
                     margin: 0px 0 25px 0
