--- a/src/sass/_modal.sass
+++ b/src/sass/_modal.sass
@@ -50,15 +50,15 @@
                 width: 65%
                 background-color: #b3adab
                 margin-bottom: 30px
-                &:focus
-                    border-bottom: 2px solid #fc7979 
+                // &:focus
+                //     border-bottom: 2px solid #fc7979 
             .text_field
                 @include form_element
                 width: 65%
                 background-color: #b3adab
                 margin-bottom: 25px
-                &:focus
-                    border-bottom: 2px solid #fc7979
+                // &:focus
+                //     border-bottom: 2px solid #fc7979
             .btn.btn-form
                 width: 50%
                 background-color: #d95252
